--- a/style.css
+++ b/style.css
@@ -268,8 +268,13 @@ p {
     right: 0;
     bottom: 0;
     left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    align-items: stretch;
 }
 
 .noise-overlay > svg {
     min-height: 100vh;
+    min-width: 100%;
 }
