--- a/style.css
+++ b/style.css
@@ -242,11 +242,13 @@ p {
 }
 
 .model-viewer {
+    --poster-color: transparent;
     width: 80%;
     max-width: 500px;
     flex-grow: 2;
     /* min-height: 80vh; */
 }
+
 
 @media all and (max-width: 768px) {
     .model-wrapper {
