--- a/style.css
+++ b/style.css
@@ -23,7 +23,16 @@ body {
     padding: 0;
     font-size: 32px;
     font-weight: bold;
-    background-image:#99ffbb;background-image:  
+    background-image:#99ffbb;
+    background-image:  
+    -o-radial-gradient(at 58% 67%, hsla(164,76%,62%,1) 0, transparent 43%),  
+    -o-radial-gradient(at 84% 27%, hsla(354,79%,62%,1) 0, transparent 49%),  
+    -o-radial-gradient(at 27% 30%, hsla(195,63%,62%,1) 0, transparent 44%),  
+    -o-radial-gradient(at 74% 39%, hsla(4,93%,73%,1) 0, transparent 50%),  
+    -o-radial-gradient(at 45% 95%, hsla(209,80%,68%,1) 0, transparent 54%),  
+    -o-radial-gradient(at 9% 81%, hsla(171,63%,62%,1) 0, transparent 45%),  
+    -o-radial-gradient(at 47% 39%, hsla(329,80%,64%,1) 0, transparent 44%);
+    background-image:  
     radial-gradient(at 58% 67%, hsla(164,76%,62%,1) 0, transparent 43%),  
     radial-gradient(at 84% 27%, hsla(354,79%,62%,1) 0, transparent 49%),  
     radial-gradient(at 27% 30%, hsla(195,63%,62%,1) 0, transparent 44%),  
